# profil_software_2021

./: .flake8  .pre-commit-config.yaml  README.md  abc.csv  calculations.py  cli.py  pyproject.toml  requirements.txt  test_average_by_month.py  test_high_cumulative_growth.py  train.py  train_concepts.py
profil_software/: calculations.py  cli.py  train.py
profile_software_2021/: calculations.py
src/: calculations.py  cli.py
src/profil_software_2021/: calculations.py  cli.py
testing/: test_high_cumulative_growth.py
tests/: test_average_by_month.py  test_high_cumulative_growth.py
