[tool.poetry]
name = "profil_software_2021"
version = "0.1.0"
description = "Package for the recruitment process programming tasks."
authors = ["Dominik Semsch <dominik.semsch@gmail.com>"]
readme = "README.md"
packages = [
    { include = "profil_software_2021", from = "src" },
]

[tool.poetry.scripts]
ch = "profil_software_2021.cli:main"

# NOTE: use pip 21.1

[tool.poetry.dependencies]
python = "^3.9"
coinpaprika = "0.1.0"
click = "7.1.2"
pre-commit = "2.12.1"
pandas = "1.2.3"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
